--- a/index.html
+++ b/index.html
@@ -8,27 +8,17 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
     </style>
-  <script defer src="script28.js"></script>
   <title>PAC-MAN</title>
 </head>
 <body>
-  <header>
-    <p>1UP <span id="score"></span></p>
-    <p>DOTS REMAINING <span id="dots-remaining"></span></p>
-    <p><span class="lives"></span></p>
-    <a href="./start_screen.html" id="quit">QUIT GAME</a>
-  </header>
-  <section>
-    <p class="ready">ready!</p>
-    <div class="grid"></div>
+  <body>
+    <img id="pacman-logo" src="https://cdn-cms.bnea.io/sites/default/files/games/logo/game-logo_42.png" alt="logo">
     
-  </section>
-  
-  <footer>
-   
-    <button id="lost-button">YOU LOST!</button>
-    <button id="won-button">YOU WON!</button>
-  </footer>
+    <p>Collect all the dots to win the game</p>
+    <p>Energizers will let you hunt ghosts and send them back to their cells</p>
+    <p>If ghosts catch you, you lose<span class="colored-text" > 1 </span>life</p>
+    <p>You have<span class="colored-text" > 3 </span>lives</p>
+    <a href="./index.html">START PLAYING</a>
+  </body>
 </body>
 </html>
-
