--- a/game_screen.html
+++ b/game_screen.html
@@ -16,7 +16,7 @@
     <p>1UP <span id="score"></span></p>
     <p>DOTS REMAINING <span id="dots-remaining"></span></p>
     <p><span class="lives"></span></p>
-    <a href="./start_screen.html" id="quit">QUIT GAME</a>
+    <a href="./index.html" id="quit">QUIT GAME</a>
   </header>
   <section>
     <p class="ready">ready!</p>
