--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p>Energizers will let you hunt ghosts and send them back to their cells</p>
     <p>If ghosts catch you, you lose<span class="colored-text" > 1 </span>life</p>
     <p>You have<span class="colored-text" > 3 </span>lives</p>
-    <a href="./index.html">START PLAYING</a>
+    <a href="./game_screen.html">START PLAYING</a>
   </body>
 </body>
 </html>
