is-anything-ever-done

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
   <body>
     <img id="pacman-logo" src="https://cdn-cms.bnea.io/sites/default/files/games/logo/game-logo_42.png" alt="logo">
-    
     <p>Collect all the dots to win the game</p>
+    <p>Use your keyboard arrow keys to move around the maze</p>
     <p>Energizers will let you hunt ghosts and send them back to their cells</p>
     <p>If ghosts catch you, you lose<span class="colored-text" > 1 </span>life</p>
     <p>You have<span class="colored-text" > 3 </span>lives</p>
